Generate interfaces for SDK for RBAC API. (#69)
