# mds/v2/model_iam_v2_role_binding_list.go
@@ -29,13 +29,18 @@ import (
 	"encoding/json"
 )
 
-// IamV2RoleBindingList A role binding grants a Principal a role on resources that match a pattern.  The API allows you to perform create, delete, and list operations on role bindings.   Related guide: [Role-Based Access Control (RBAC)](https://docs.confluent.io/cloud/current/access-management/access-control/cloud-rbac.html).
+import (
+	"reflect"
+)
+
+// IamV2RoleBindingList A role binding grants a Principal a role on resources that match a pattern.  The API allows you to perform create, delete, and list operations on role bindings.   Related guide: [Role-Based Access Control (RBAC)](https://docs.confluent.io/cloud/current/access-management/access-control/cloud-rbac.html).  ## The Role Bindings Model <SchemaDefinition schemaRef=\"#/components/schemas/iam.v2.RoleBinding\" />
 type IamV2RoleBindingList struct {
 	// APIVersion defines the schema version of this representation of a resource.
 	ApiVersion string `json:"api_version"`
 	// Kind defines the object this REST resource represents.
 	Kind string `json:"kind"`
 	Metadata ListMeta `json:"metadata"`
+	// A data property that contains an array of resource items. Each entry in the array is a separate resource.
 	Data []IamV2RoleBinding `json:"data"`
 }
 
@@ -154,6 +159,44 @@ func (o *IamV2RoleBindingList) GetDataOk() (*[]IamV2RoleBinding, bool) {
 // SetData sets field value
 func (o *IamV2RoleBindingList) SetData(v []IamV2RoleBinding) {
 	o.Data = v
+}
+
+// Redact resets all sensitive fields to their zero value.
+func (o *IamV2RoleBindingList) Redact() {
+    o.recurseRedact(&o.ApiVersion)
+    o.recurseRedact(&o.Kind)
+    o.recurseRedact(&o.Metadata)
+    o.recurseRedact(&o.Data)
+}
+
+func (o *IamV2RoleBindingList) recurseRedact(v interface{}) {
+    type redactor interface {
+        Redact()
+    }
+    if r, ok := v.(redactor); ok {
+        r.Redact()
+    } else {
+        val := reflect.ValueOf(v)
+        if val.Kind() == reflect.Ptr {
+            val = val.Elem()
+        }
+        switch val.Kind() {
+        case reflect.Slice, reflect.Array:
+            for i := 0; i < val.Len(); i++ {
+                // support data types declared without pointers
+                o.recurseRedact(val.Index(i).Interface())
+                // ... and data types that were declared without but need pointers (for Redact)
+                if val.Index(i).CanAddr() {
+                    o.recurseRedact(val.Index(i).Addr().Interface())
+                }
+            }
+        }
+    }
+}
+
+func (o IamV2RoleBindingList) zeroField(v interface{}) {
+    p := reflect.ValueOf(v).Elem()
+    p.Set(reflect.Zero(p.Type()))
 }
 
 func (o IamV2RoleBindingList) MarshalJSON() ([]byte, error) {
