# mds/v2/model_v2_role_binding.go
@@ -15,9 +15,9 @@
 /*
 Metadata Service API
 
-RBAC Public API
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 
-API version: iam/v2
+API version: v2
 Contact: cloud-rbac-eng@confluent.io
 */
 
@@ -29,12 +29,8 @@ import (
 	"encoding/json"
 )
 
-import (
-	"reflect"
-)
-
-// IamV2RoleBinding A role binding grants a Principal a role on resources that match a pattern.  The API allows you to perform create, delete, and list operations on role bindings.   Related guide: [Role-Based Access Control (RBAC)](https://docs.confluent.io/cloud/current/access-management/access-control/cloud-rbac.html).  ## The Role Bindings Model <SchemaDefinition schemaRef=\"#/components/schemas/iam.v2.RoleBinding\" />
-type IamV2RoleBinding struct {
+// V2RoleBinding A role binding grants a Principal a role on resources that match a pattern.  The API allows you to perform create, delete, and list operations on role bindings. 
+type V2RoleBinding struct {
 	// APIVersion defines the schema version of this representation of a resource.
 	ApiVersion *string `json:"api_version,omitempty"`
 	// Kind defines the object this REST resource represents.
@@ -50,25 +46,25 @@ type IamV2RoleBinding struct {
 	CrnPattern *string `json:"crn_pattern,omitempty"`
 }
 
-// NewIamV2RoleBinding instantiates a new IamV2RoleBinding object
+// NewV2RoleBinding instantiates a new V2RoleBinding object
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewIamV2RoleBinding() *IamV2RoleBinding {
-	this := IamV2RoleBinding{}
+func NewV2RoleBinding() *V2RoleBinding {
+	this := V2RoleBinding{}
 	return &this
 }
 
-// NewIamV2RoleBindingWithDefaults instantiates a new IamV2RoleBinding object
+// NewV2RoleBindingWithDefaults instantiates a new V2RoleBinding object
 // This constructor will only assign default values to properties that have it defined,
 // but it doesn't guarantee that properties required by API are set
-func NewIamV2RoleBindingWithDefaults() *IamV2RoleBinding {
-	this := IamV2RoleBinding{}
+func NewV2RoleBindingWithDefaults() *V2RoleBinding {
+	this := V2RoleBinding{}
 	return &this
 }
 
 // GetApiVersion returns the ApiVersion field value if set, zero value otherwise.
-func (o *IamV2RoleBinding) GetApiVersion() string {
+func (o *V2RoleBinding) GetApiVersion() string {
 	if o == nil || o.ApiVersion == nil {
 		var ret string
 		return ret
@@ -78,7 +74,7 @@ func (o *IamV2RoleBinding) GetApiVersion() string {
 
 // GetApiVersionOk returns a tuple with the ApiVersion field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *IamV2RoleBinding) GetApiVersionOk() (*string, bool) {
+func (o *V2RoleBinding) GetApiVersionOk() (*string, bool) {
 	if o == nil || o.ApiVersion == nil {
 		return nil, false
 	}
@@ -86,7 +82,7 @@ func (o *IamV2RoleBinding) GetApiVersionOk() (*string, bool) {
 }
 
 // HasApiVersion returns a boolean if a field has been set.
-func (o *IamV2RoleBinding) HasApiVersion() bool {
+func (o *V2RoleBinding) HasApiVersion() bool {
 	if o != nil && o.ApiVersion != nil {
 		return true
 	}
@@ -95,12 +91,12 @@ func (o *IamV2RoleBinding) HasApiVersion() bool {
 }
 
 // SetApiVersion gets a reference to the given string and assigns it to the ApiVersion field.
-func (o *IamV2RoleBinding) SetApiVersion(v string) {
+func (o *V2RoleBinding) SetApiVersion(v string) {
 	o.ApiVersion = &v
 }
 
 // GetKind returns the Kind field value if set, zero value otherwise.
-func (o *IamV2RoleBinding) GetKind() string {
+func (o *V2RoleBinding) GetKind() string {
 	if o == nil || o.Kind == nil {
 		var ret string
 		return ret
@@ -110,7 +106,7 @@ func (o *IamV2RoleBinding) GetKind() string {
 
 // GetKindOk returns a tuple with the Kind field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *IamV2RoleBinding) GetKindOk() (*string, bool) {
+func (o *V2RoleBinding) GetKindOk() (*string, bool) {
 	if o == nil || o.Kind == nil {
 		return nil, false
 	}
@@ -118,7 +114,7 @@ func (o *IamV2RoleBinding) GetKindOk() (*string, bool) {
 }
 
 // HasKind returns a boolean if a field has been set.
-func (o *IamV2RoleBinding) HasKind() bool {
+func (o *V2RoleBinding) HasKind() bool {
 	if o != nil && o.Kind != nil {
 		return true
 	}
@@ -127,12 +123,12 @@ func (o *IamV2RoleBinding) HasKind() bool {
 }
 
 // SetKind gets a reference to the given string and assigns it to the Kind field.
-func (o *IamV2RoleBinding) SetKind(v string) {
+func (o *V2RoleBinding) SetKind(v string) {
 	o.Kind = &v
 }
 
 // GetId returns the Id field value if set, zero value otherwise.
-func (o *IamV2RoleBinding) GetId() string {
+func (o *V2RoleBinding) GetId() string {
 	if o == nil || o.Id == nil {
 		var ret string
 		return ret
@@ -142,7 +138,7 @@ func (o *IamV2RoleBinding) GetId() string {
 
 // GetIdOk returns a tuple with the Id field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *IamV2RoleBinding) GetIdOk() (*string, bool) {
+func (o *V2RoleBinding) GetIdOk() (*string, bool) {
 	if o == nil || o.Id == nil {
 		return nil, false
 	}
@@ -150,7 +146,7 @@ func (o *IamV2RoleBinding) GetIdOk() (*string, bool) {
 }
 
 // HasId returns a boolean if a field has been set.
-func (o *IamV2RoleBinding) HasId() bool {
+func (o *V2RoleBinding) HasId() bool {
 	if o != nil && o.Id != nil {
 		return true
 	}
@@ -159,12 +155,12 @@ func (o *IamV2RoleBinding) HasId() bool {
 }
 
 // SetId gets a reference to the given string and assigns it to the Id field.
-func (o *IamV2RoleBinding) SetId(v string) {
+func (o *V2RoleBinding) SetId(v string) {
 	o.Id = &v
 }
 
 // GetMetadata returns the Metadata field value if set, zero value otherwise.
-func (o *IamV2RoleBinding) GetMetadata() ObjectMeta {
+func (o *V2RoleBinding) GetMetadata() ObjectMeta {
 	if o == nil || o.Metadata == nil {
 		var ret ObjectMeta
 		return ret
@@ -174,7 +170,7 @@ func (o *IamV2RoleBinding) GetMetadata() ObjectMeta {
 
 // GetMetadataOk returns a tuple with the Metadata field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *IamV2RoleBinding) GetMetadataOk() (*ObjectMeta, bool) {
+func (o *V2RoleBinding) GetMetadataOk() (*ObjectMeta, bool) {
 	if o == nil || o.Metadata == nil {
 		return nil, false
 	}
@@ -182,7 +178,7 @@ func (o *IamV2RoleBinding) GetMetadataOk() (*ObjectMeta, bool) {
 }
 
 // HasMetadata returns a boolean if a field has been set.
-func (o *IamV2RoleBinding) HasMetadata() bool {
+func (o *V2RoleBinding) HasMetadata() bool {
 	if o != nil && o.Metadata != nil {
 		return true
 	}
@@ -191,12 +187,12 @@ func (o *IamV2RoleBinding) HasMetadata() bool {
 }
 
 // SetMetadata gets a reference to the given ObjectMeta and assigns it to the Metadata field.
-func (o *IamV2RoleBinding) SetMetadata(v ObjectMeta) {
+func (o *V2RoleBinding) SetMetadata(v ObjectMeta) {
 	o.Metadata = &v
 }
 
 // GetPrincipal returns the Principal field value if set, zero value otherwise.
-func (o *IamV2RoleBinding) GetPrincipal() string {
+func (o *V2RoleBinding) GetPrincipal() string {
 	if o == nil || o.Principal == nil {
 		var ret string
 		return ret
@@ -206,7 +202,7 @@ func (o *IamV2RoleBinding) GetPrincipal() string {
 
 // GetPrincipalOk returns a tuple with the Principal field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *IamV2RoleBinding) GetPrincipalOk() (*string, bool) {
+func (o *V2RoleBinding) GetPrincipalOk() (*string, bool) {
 	if o == nil || o.Principal == nil {
 		return nil, false
 	}
@@ -214,7 +210,7 @@ func (o *IamV2RoleBinding) GetPrincipalOk() (*string, bool) {
 }
 
 // HasPrincipal returns a boolean if a field has been set.
-func (o *IamV2RoleBinding) HasPrincipal() bool {
+func (o *V2RoleBinding) HasPrincipal() bool {
 	if o != nil && o.Principal != nil {
 		return true
 	}
@@ -223,12 +219,12 @@ func (o *IamV2RoleBinding) HasPrincipal() bool {
 }
 
 // SetPrincipal gets a reference to the given string and assigns it to the Principal field.
-func (o *IamV2RoleBinding) SetPrincipal(v string) {
+func (o *V2RoleBinding) SetPrincipal(v string) {
 	o.Principal = &v
 }
 
 // GetRoleName returns the RoleName field value if set, zero value otherwise.
-func (o *IamV2RoleBinding) GetRoleName() string {
+func (o *V2RoleBinding) GetRoleName() string {
 	if o == nil || o.RoleName == nil {
 		var ret string
 		return ret
@@ -238,7 +234,7 @@ func (o *IamV2RoleBinding) GetRoleName() string {
 
 // GetRoleNameOk returns a tuple with the RoleName field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *IamV2RoleBinding) GetRoleNameOk() (*string, bool) {
+func (o *V2RoleBinding) GetRoleNameOk() (*string, bool) {
 	if o == nil || o.RoleName == nil {
 		return nil, false
 	}
@@ -246,7 +242,7 @@ func (o *IamV2RoleBinding) GetRoleNameOk() (*string, bool) {
 }
 
 // HasRoleName returns a boolean if a field has been set.
-func (o *IamV2RoleBinding) HasRoleName() bool {
+func (o *V2RoleBinding) HasRoleName() bool {
 	if o != nil && o.RoleName != nil {
 		return true
 	}
@@ -255,12 +251,12 @@ func (o *IamV2RoleBinding) HasRoleName() bool {
 }
 
 // SetRoleName gets a reference to the given string and assigns it to the RoleName field.
-func (o *IamV2RoleBinding) SetRoleName(v string) {
+func (o *V2RoleBinding) SetRoleName(v string) {
 	o.RoleName = &v
 }
 
 // GetCrnPattern returns the CrnPattern field value if set, zero value otherwise.
-func (o *IamV2RoleBinding) GetCrnPattern() string {
+func (o *V2RoleBinding) GetCrnPattern() string {
 	if o == nil || o.CrnPattern == nil {
 		var ret string
 		return ret
@@ -270,7 +266,7 @@ func (o *IamV2RoleBinding) GetCrnPattern() string {
 
 // GetCrnPatternOk returns a tuple with the CrnPattern field value if set, nil otherwise
 // and a boolean to check if the value has been set.
-func (o *IamV2RoleBinding) GetCrnPatternOk() (*string, bool) {
+func (o *V2RoleBinding) GetCrnPatternOk() (*string, bool) {
 	if o == nil || o.CrnPattern == nil {
 		return nil, false
 	}
@@ -278,7 +274,7 @@ func (o *IamV2RoleBinding) GetCrnPatternOk() (*string, bool) {
 }
 
 // HasCrnPattern returns a boolean if a field has been set.
-func (o *IamV2RoleBinding) HasCrnPattern() bool {
+func (o *V2RoleBinding) HasCrnPattern() bool {
 	if o != nil && o.CrnPattern != nil {
 		return true
 	}
@@ -287,52 +283,11 @@ func (o *IamV2RoleBinding) HasCrnPattern() bool {
 }
 
 // SetCrnPattern gets a reference to the given string and assigns it to the CrnPattern field.
-func (o *IamV2RoleBinding) SetCrnPattern(v string) {
+func (o *V2RoleBinding) SetCrnPattern(v string) {
 	o.CrnPattern = &v
 }
 
-// Redact resets all sensitive fields to their zero value.
-func (o *IamV2RoleBinding) Redact() {
-    o.recurseRedact(o.ApiVersion)
-    o.recurseRedact(o.Kind)
-    o.recurseRedact(o.Id)
-    o.recurseRedact(o.Metadata)
-    o.recurseRedact(o.Principal)
-    o.recurseRedact(o.RoleName)
-    o.recurseRedact(o.CrnPattern)
-}
-
-func (o *IamV2RoleBinding) recurseRedact(v interface{}) {
-    type redactor interface {
-        Redact()
-    }
-    if r, ok := v.(redactor); ok {
-        r.Redact()
-    } else {
-        val := reflect.ValueOf(v)
-        if val.Kind() == reflect.Ptr {
-            val = val.Elem()
-        }
-        switch val.Kind() {
-        case reflect.Slice, reflect.Array:
-            for i := 0; i < val.Len(); i++ {
-                // support data types declared without pointers
-                o.recurseRedact(val.Index(i).Interface())
-                // ... and data types that were declared without but need pointers (for Redact)
-                if val.Index(i).CanAddr() {
-                    o.recurseRedact(val.Index(i).Addr().Interface())
-                }
-            }
-        }
-    }
-}
-
-func (o IamV2RoleBinding) zeroField(v interface{}) {
-    p := reflect.ValueOf(v).Elem()
-    p.Set(reflect.Zero(p.Type()))
-}
-
-func (o IamV2RoleBinding) MarshalJSON() ([]byte, error) {
+func (o V2RoleBinding) MarshalJSON() ([]byte, error) {
 	toSerialize := map[string]interface{}{}
 	if o.ApiVersion != nil {
 		toSerialize["api_version"] = o.ApiVersion
@@ -358,38 +313,38 @@ func (o IamV2RoleBinding) MarshalJSON() ([]byte, error) {
 	return json.Marshal(toSerialize)
 }
 
-type NullableIamV2RoleBinding struct {
-	value *IamV2RoleBinding
+type NullableV2RoleBinding struct {
+	value *V2RoleBinding
 	isSet bool
 }
 
-func (v NullableIamV2RoleBinding) Get() *IamV2RoleBinding {
+func (v NullableV2RoleBinding) Get() *V2RoleBinding {
 	return v.value
 }
 
-func (v *NullableIamV2RoleBinding) Set(val *IamV2RoleBinding) {
+func (v *NullableV2RoleBinding) Set(val *V2RoleBinding) {
 	v.value = val
 	v.isSet = true
 }
 
-func (v NullableIamV2RoleBinding) IsSet() bool {
+func (v NullableV2RoleBinding) IsSet() bool {
 	return v.isSet
 }
 
-func (v *NullableIamV2RoleBinding) Unset() {
+func (v *NullableV2RoleBinding) Unset() {
 	v.value = nil
 	v.isSet = false
 }
 
-func NewNullableIamV2RoleBinding(val *IamV2RoleBinding) *NullableIamV2RoleBinding {
-	return &NullableIamV2RoleBinding{value: val, isSet: true}
+func NewNullableV2RoleBinding(val *V2RoleBinding) *NullableV2RoleBinding {
+	return &NullableV2RoleBinding{value: val, isSet: true}
 }
 
-func (v NullableIamV2RoleBinding) MarshalJSON() ([]byte, error) {
+func (v NullableV2RoleBinding) MarshalJSON() ([]byte, error) {
 	return json.Marshal(v.value)
 }
 
-func (v *NullableIamV2RoleBinding) UnmarshalJSON(src []byte) error {
+func (v *NullableV2RoleBinding) UnmarshalJSON(src []byte) error {
 	v.isSet = true
 	return json.Unmarshal(src, &v.value)
 }
